src/test/deca/context/invalid/resultats/test6_op_bool2-cont.res
./src/test/deca/context/invalid/test6_op_bool2.deca:17:1: The types are incompatible for a Boolean Operation
